--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,22 +1,42 @@
-/**index.wxss**/
-.userinfo {
+.loading-row {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  align-self: center;
+  justify-content: center;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
+.no-data {
+  display: none;
+}
+
+.topic-list-item {
+  display: flex;
+}
+
+.topic-list-item image {
+  flex: initial;
+  width: 50px;
+  height: 50px;
   margin: 20rpx;
-  border-radius: 50%;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.topic-list-item .text {
+  flex: 1;
+  margin: 5px;
+  font-size: 16px;
 }
 
-.usermotto {
-  margin-top: 200px;
+.topic-list-item .author {
+  margin: 5px;
   color: red;
+  font-size: 16px;
+}
+
+.footer-loading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
 }
