--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,6 +1,5 @@
 <!--pages/detail/detail.wxml-->
-<import src="../../pages/wxParse/wxParse.wxml"/>
 
-<template is="wxParse" data="{{wxParseData:article.nodes}}"/>
-<!-- <view>{{ content }}</view> -->
-<!-- <wemark md="{{ content }}" link highlight type="rich-text"></wemark> -->
+<import src="/towxml/entry.wxml"/>
+
+<template is="entry" data="{{...article}}"/>
