--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,47 +1,111 @@
 <!--index.wxml-->
 <view class="container">
-  <!-- <view wx:for="{{ toplicList }}" wx:key="{{ index }}" class="toplic-list">
-    {{ index + 1 }}: {{ item.title }}
-  </view> -->
+  <view class="swiper-tab">
+    <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">精华</view>
+    <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">分享</view>
+    <view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">招聘</view>
+</view>
 
-  <loading hidden="{{hidden}}" bindchange="loadingChange">
-    加载中...
-  </loading>
-  <scroll-view 
-    scroll-y="true" 
-    style="height: 100%;" 
-    bindscrolltolower="loadMore" 
-    bindscrolltoupper="refesh">
-    <!-- <view wx:if="{{hasRefesh}}" class="loading-row">
-      <icon type="waiting" size="45" />
-      <text>刷新中...</text>
-    </view>
-    <view wx:else class="no-data">
-      <text>没有更多内容了</text>
-    </view> -->
-    <view class="topic-list-item" 
-      wx:for="{{ topicList }}" 
-      wx:key=" {{ item.index }}"
-      wx:for-item="item" 
-      data-id="{{ item.id }}"
-      bindtap="bindViewTap">
-      <image src="{{item.author.avatar_url }}"></image>
-      <view class="text">
-        <view class='title'> 标题:{{item.title}}</view>
-        <view class='author' style=""> 
-          作者:{{item.author.loginname}}
+<swiper current="{{currentTab}}" duration="300" style="height:{{height}}px" bindchange="swiperTab">
+    <swiper-item >
+      <scroll-view 
+        class='wrap'
+        scroll-y="true" 
+        enable-back-to-top="true"
+        style="height:{{ height }}px"
+        data-tab='good' 
+        bindscrolltolower="loadMore" 
+        bindscrolltoupper="refesh">
+        <view class="topic-list-item" 
+          wx:for="{{ goodList }}" 
+          wx:key=" {{ item.index }}"
+          wx:for-item="item" 
+          data-id="{{ item.id }}"
+          bindtap="bindViewTap">
+          <image src="{{ item.author.avatar_url }}"></image>
+          <view class="text">
+            <view class='title'> 标题:{{item.title}}</view>
+            <view class='author'> 
+              作者:{{item.author.loginname}}
+            </view>
+          </view>
         </view>
-      </view>
-    </view>
-    <view class="footer">
-      <view wx:if="{{hasMore}}" 
-         class='footer-loading'>
-        <icon type="waiting" size="45" />
-        <text>玩命的加载中...</text>
-      </view>
-      <view wx:else>
-        <!-- <text>没有更多内容了</text> -->
-      </view>
-    </view>
-  </scroll-view>
+        <view class="footer">
+          <view wx:if="{{hasMore}}" class='footer-loading'>
+            <icon type="waiting" size="25" />
+            <text>玩命加载中...</text>
+          </view>
+          <view class='noMore' wx:if="noMore">
+            <text>没有更多内容</text>
+          </view>
+        </view>
+      </scroll-view>
+    </swiper-item>
+    <swiper-item>
+      <scroll-view 
+        class='wrap'
+        scroll-y="true" 
+        enable-back-to-top="true"
+        style="height:{{ height }}px" 
+        bindscrolltolower="loadMore('share')" 
+        bindscrolltoupper="refesh">
+        <view class="topic-list-item" 
+          wx:for="{{ shareList }}" 
+          wx:key=" {{ item.index }}"
+          wx:for-item="item" 
+          data-id="{{ item.id }}"
+          bindtap="bindViewTap">
+          <image src="{{ item.author.avatar_url }}"></image>
+          <view class="text">
+            <view class='title'> 标题:{{item.title}}</view>
+            <view class='author'> 
+              作者:{{item.author.loginname}}
+            </view>
+          </view>
+        </view>
+        <view class="footer">
+          <view wx:if="{{hasMore}}" class='footer-loading'>
+            <icon type="waiting" size="25" />
+            <text>玩命加载中...</text>
+          </view>
+          <view class='noMore' wx:if="noMore">
+            <text>没有更多内容</text>
+          </view>
+        </view>
+      </scroll-view>
+    </swiper-item>
+    <swiper-item>
+      <scroll-view 
+        scroll-y="true" 
+        enable-back-to-top="true"
+        style="height:{{ height }}px" 
+        bindscrolltolower="loadMore('job')" 
+        bindscrolltoupper="refesh">
+        <view class="topic-list-item" 
+          wx:for="{{ jobList }}" 
+          wx:key=" {{ item.index }}"
+          wx:for-item="item" 
+          data-id="{{ item.id }}"
+          bindtap="bindViewTap">
+          <image src="{{ item.author.avatar_url }}"></image>
+          <view class="text">
+            <view class='title'> 标题:{{item.title}}</view>
+            <view class='author'> 
+              作者:{{item.author.loginname}}
+            </view>
+          </view>
+        </view>
+        <view class="footer">
+          <view wx:if="{{hasMore}}" class='footer-loading'>
+            <icon type="waiting" size="25" />
+            <text>玩命加载中...</text>
+          </view>
+          <view class='noMore' wx:if="noMore">
+            <text>没有更多内容</text>
+          </view>
+        </view>
+      </scroll-view>
+    </swiper-item>
+</swiper>
+
 </view>
