--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,6 +1,40 @@
 .container {
-  margin: 0 20rpx 20rpx 20rpx;
+  margin: 0 0 20px 0;
+  font-family: "STHeitiTC-Light", "Microsoft YaHei Light", "Hiragino Sans GB", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  line-height: 1.8;
+  word-wrap: break-word;
+  word-break:break-all;
+  padding-top: 45px;
 }
+
+.wrap {
+  padding-top: 65px;
+}
+
+.swiper-tab{
+  width: 100%;
+  border-bottom: 2rpx solid #ccc;
+  text-align: center;
+  height: 88rpx;
+  line-height: 88rpx;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+}
+.swiper-tab-item{
+    width: 30%; 
+    color:#434343;
+}
+.active{
+    color:#1AAD16;
+    border-bottom: 4rpx solid #1AAD16;
+}
+swiper{
+  text-align: center;
+}
+
 
 .loading-row {
   display: flex;
@@ -17,26 +51,32 @@
 .topic-list-item {
   display: flex;
   align-items: center;
-  border-bottom: 1rpx solid #ececec;
-  margin: 10rpx;
+  border-bottom: 1px solid #ececec;
+  margin: 10px;
 }
 
 .topic-list-item image {
   flex: initial;
   width: 50px;
   height: 50px;
-  margin: 20rpx;
+  margin: 20px;
+  border-radius: 100%;
 }
 
 .topic-list-item .text {
   flex: 1;
   font-size: 16px;
+  text-align:left;
 }
 
 .topic-list-item .author {
-  margin: 5px;
   color: #1aad16;
   font-size: 16px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
 }
 
 .footer-loading {
@@ -45,4 +85,16 @@
   align-items: center;
   align-self: center;
   justify-content: center;
+  padding-bottom: 30px;
+}
+
+.footer-loading text {
+  color: #888888;
+  margin-left: 10px;
+}
+
+.footer .noMore {
+  color: #888888;
+  justify-content: center;
+  display: none;
 }
