--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,18 +6,54 @@
     <view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">招聘</view>
 </view>
 
-<swiper current="{{currentTab}}" duration="300" style="height:{{height}}px" bindchange="swiperTab">
-    <swiper-item >
+<swiper class="swiper" current="{{currentTab}}" duration="300" style="height:{{height -45 }}px" bindchange="swiperTab">
+
+    <swiper-item style="height:{{ height - 45 }}px" >
       <scroll-view 
-        class='wrap'
+        class='scroll-view'
         scroll-y="true" 
         enable-back-to-top="true"
-        style="height:{{ height }}px"
+        style="height:{{ height - 45 }}px"
         data-tab='good' 
+        bindscrolltolower="loadMore" 
+        bindscrolltoupper="refresh">
+        <view class="topic-list-item" 
+          wx:for="{{ good.list }}" 
+          wx:key=" {{ item.index }}"
+          wx:for-item="item" 
+          data-id="{{ item.id }}"
+          bindtap="bindViewTap">
+          <image src="{{ item.author.avatar_url }}"></image>
+          <view class="text">
+            <view class='title'> 标题:{{item.title}}</view>
+            <view class='author'> 
+              作者:{{item.author.loginname}}
+            </view>
+          </view>
+        </view>
+        <view class="footer">
+          <view wx:if="{{hasMore}}" class='footer-loading'>
+            <icon type="waiting" size="25" />
+            <text>玩命加载中...</text>
+          </view>
+          <view class='noMore' wx:if="{{ noMore }}">
+            <text>没有更多内容</text>
+          </view>
+        </view>
+      </scroll-view>
+    </swiper-item>
+
+    <swiper-item style="height:{{ height - 45 }}px" >
+      <scroll-view 
+        class='scroll-view'
+        scroll-y="true" 
+        enable-back-to-top="true"
+        style="height:{{ height - 45 }}px"
+        data-tab='share' 
         bindscrolltolower="loadMore" 
         bindscrolltoupper="refesh">
         <view class="topic-list-item" 
-          wx:for="{{ goodList }}" 
+          wx:for="{{ share.list }}" 
           wx:key=" {{ item.index }}"
           wx:for-item="item" 
           data-id="{{ item.id }}"
@@ -35,22 +71,25 @@
             <icon type="waiting" size="25" />
             <text>玩命加载中...</text>
           </view>
-          <view class='noMore' wx:if="noMore">
+          <view class='noMore' wx:if="{{ noMore }}">
             <text>没有更多内容</text>
           </view>
         </view>
       </scroll-view>
     </swiper-item>
-    <swiper-item>
+
+
+    <swiper-item style="height:{{ height - 45 }}px" >
       <scroll-view 
-        class='wrap'
+        class='scroll-view'
         scroll-y="true" 
         enable-back-to-top="true"
-        style="height:{{ height }}px" 
-        bindscrolltolower="loadMore('share')" 
+        style="height:{{ height - 45 }}px"
+        data-tab='job' 
+        bindscrolltolower="loadMore" 
         bindscrolltoupper="refesh">
         <view class="topic-list-item" 
-          wx:for="{{ shareList }}" 
+          wx:for="{{ job.list }}" 
           wx:key=" {{ item.index }}"
           wx:for-item="item" 
           data-id="{{ item.id }}"
@@ -68,39 +107,7 @@
             <icon type="waiting" size="25" />
             <text>玩命加载中...</text>
           </view>
-          <view class='noMore' wx:if="noMore">
-            <text>没有更多内容</text>
-          </view>
-        </view>
-      </scroll-view>
-    </swiper-item>
-    <swiper-item>
-      <scroll-view 
-        scroll-y="true" 
-        enable-back-to-top="true"
-        style="height:{{ height }}px" 
-        bindscrolltolower="loadMore('job')" 
-        bindscrolltoupper="refesh">
-        <view class="topic-list-item" 
-          wx:for="{{ jobList }}" 
-          wx:key=" {{ item.index }}"
-          wx:for-item="item" 
-          data-id="{{ item.id }}"
-          bindtap="bindViewTap">
-          <image src="{{ item.author.avatar_url }}"></image>
-          <view class="text">
-            <view class='title'> 标题:{{item.title}}</view>
-            <view class='author'> 
-              作者:{{item.author.loginname}}
-            </view>
-          </view>
-        </view>
-        <view class="footer">
-          <view wx:if="{{hasMore}}" class='footer-loading'>
-            <icon type="waiting" size="25" />
-            <text>玩命加载中...</text>
-          </view>
-          <view class='noMore' wx:if="noMore">
+          <view class='noMore' wx:if="{{ noMore }}">
             <text>没有更多内容</text>
           </view>
         </view>
