--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -6,3 +6,27 @@
 view.h2w {
   padding-bottom: 50rpx;
 }
+
+.container {
+  padding: 0 40rpx;
+}
+
+.container .title {
+  font-weight: bold;
+  text-align: center;
+}
+
+.container .wrap {
+  display: flex;
+  font-size: 14px;
+  padding-top: 4px;
+}
+
+.container .wrap .name {
+  flex: init;
+  padding-right: 20px;
+}
+
+.container .wrap .date {
+  flex: 1;
+}
