--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,11 +4,10 @@
     <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">精华</view>
     <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">分享</view>
     <view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">招聘</view>
-</view>
+  </view>
 
 <swiper class="swiper" current="{{currentTab}}" duration="300" style="height:{{height -45 }}px" bindchange="swiperTab">
-
-    <swiper-item style="height:{{ height - 45 }}px" >
+    <swiper-item >
       <scroll-view 
         class='scroll-view'
         scroll-y="true" 
@@ -43,7 +42,7 @@
       </scroll-view>
     </swiper-item>
 
-    <swiper-item style="height:{{ height - 45 }}px" >
+    <swiper-item>
       <scroll-view 
         class='scroll-view'
         scroll-y="true" 
@@ -78,8 +77,7 @@
       </scroll-view>
     </swiper-item>
 
-
-    <swiper-item style="height:{{ height - 45 }}px" >
+    <swiper-item>
       <scroll-view 
         class='scroll-view'
         scroll-y="true" 
@@ -113,6 +111,7 @@
         </view>
       </scroll-view>
     </swiper-item>
+
 </swiper>
 
 </view>
