--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,24 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="swiper-tab">
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <Card />
+  <!-- <view class="swiper-tab">
     <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">精华</view>
     <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">分享</view>
     <view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">招聘</view>
@@ -112,6 +130,6 @@
       </scroll-view>
     </swiper-item>
 
-</swiper>
+</swiper> -->
 
 </view>
