--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,24 +1,8 @@
 <!--index.wxml-->
 <view class="container">
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <Card />
-  <!-- <view class="swiper-tab">
+  <!-- <card data="{{  }}" /> -->
+  
+  <view class="swiper-tab">
     <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">精华</view>
     <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">分享</view>
     <view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">招聘</view>
@@ -34,7 +18,15 @@
         data-tab='good' 
         bindscrolltolower="loadMore" 
         bindscrolltoupper="refresh">
-        <view class="topic-list-item" 
+        <card 
+          data="{{ good.list[0] }}"
+          bindtap="bindViewTap">
+        </card>
+        <!-- wx:for="{{ good.list }}" 
+          wx:key=" {{ item.index }}"
+          wx:for-item="item" 
+          data-id="{{ item.id }}" -->
+        <!-- <view class="topic-list-item" 
           wx:for="{{ good.list }}" 
           wx:key=" {{ item.index }}"
           wx:for-item="item" 
@@ -47,7 +39,7 @@
               作者:{{item.author.loginname}}
             </view>
           </view>
-        </view>
+        </view> -->
         <view class="footer">
           <view wx:if="{{hasMore}}" class='footer-loading'>
             <icon type="waiting" size="25" />
@@ -130,6 +122,6 @@
       </scroll-view>
     </swiper-item>
 
-</swiper> -->
+</swiper>
 
 </view>
