--- a/components/Tag/Tag.wxss
+++ b/components/Tag/Tag.wxss
@@ -4,7 +4,7 @@
 .gray {
   padding: 0px 4px;
   font-size: 14px;
-  border-radius: 2px;
+  border-radius: 4px;
 }
 
 .green {
@@ -14,5 +14,5 @@
 
 .gray {
   background: rgba(178, 178, 178, .6);
-  color: rgba(255, 255, 255, .6);
+  color: rgba(255, 255, 255, 1);
 }
